# c-compiler

./: CMakeLists.txt  t
include/: ast.h  codegen.h  lexer.h  parser.h  str_slice.h
src/: ast.c  ast_debug.c  codegen.c  codegen.h  lexer.c  main.c  parser.c
testing/: test.cmm
